--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -1,3 +1,4 @@
+THIS IS AN INTENTIONAL BUILD ERROR;
 .post-preview {
   transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
   border-radius: 12px; /* 可以给卡片加个圆角，更好看 */
