--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@ layout: compress
   {% include head.html %}
   {% include mathjax_support.html %}
 
-  <body>
+  <body {% if page.solution_warning %}data-solution-warning="true"{% endif %}>
     {% include sidebar.html lang=lang %}
 
     <div id="main-wrapper" class="d-flex justify-content-center">
@@ -83,5 +83,18 @@ layout: compress
     {% endfor %}
 
     {% include_cached search-loader.html lang=lang %}
+
+    <div class="toast-container position-fixed top-0 end-0 p-3">
+      <div id="solution-toast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="toast-header">
+          <i class="fa-solid fa-triangle-exclamation text-warning me-2"></i>
+          <strong class="me-auto">温馨提示</strong>
+          <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div>
+        <div class="toast-body">
+          照抄有风险，CV需谨慎
+        </div>
+      </div>
+    </div>
   </body>
 </html>
