--- a/_sass/themes/_dark.scss
+++ b/_sass/themes/_dark.scss
@@ -14,6 +14,7 @@
   --label-color: #a7a7a7;
   --blockquote-border-color: #2d82cd;
   --blockquote-text-color: #bababa;
+  --blockquote-background-color: #9191911c;
   --link-color: rgb(138, 180, 248);
   --link-underline-color: rgb(82, 108, 150);
   --button-bg: #1e1e1e;
