--- a/_sass/themes/_light.scss
+++ b/_sass/themes/_light.scss
@@ -12,6 +12,7 @@
   --label-color: #585858;
   --blockquote-border-color: #419fe7;
   --blockquote-text-color: #282828;
+  --blockquote-background-color: #d5d5d52c;
   --link-color: #0056b2;
   --link-underline-color: #dee2e6;
   --button-bg: #ffffff;
