--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -59,6 +59,7 @@ blockquote {
   padding-left: 1rem;
   color: var(--blockquote-text-color);
   margin-top: 0.5rem;
+  background-color: 
 
   > p:last-child {
     margin-bottom: 0;
