--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -59,7 +59,7 @@ blockquote {
   padding-left: 1rem;
   color: var(--blockquote-text-color);
   margin-top: 0.5rem;
-  background-color: 
+  background-color: var(--blockquote-border-color)
 
   > p:last-child {
     margin-bottom: 0;
